# ds-hw-3

./: DS_HW3.ipynb  pyproject.toml
.ipynb_checkpoints/: DS_HW3-checkpoint.ipynb
