[tool.poetry]
name = "ds-hw-3"
version = "0.1.0"
description = ""
authors = ["maxafanasiev <80445276+maxafanasiev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
numpy = "^1.26.1"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
